--- a/main.html
+++ b/main.html
@@ -4,4 +4,6 @@
 </head>
 <body>
 <h1 font-family="courier">Hello</h1>
+  
+  <iframe src="https://discord.com/widget?id=763917234724143124&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 </body>
