--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <h1 font-family="courier">Join the Discord!</h1>
-  <a href="lhttps://link.to"><p>hello</p>
+ <p><a href="https://discord.gg/7xCx5dT">Visit The Movment</a></p>
   
   <iframe src="https://discord.com/widget?id=763917234724143124&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 </body>
